# NoitArchiver-Rust_ver.

./: .gitignore  Cargo.toml  ProDesign.md  Readme.md  build.rs  replit.nix  timer_save.bat
App_cmd/: Cargo.toml  build.rs
App_cmd/src/: io_commandline.rs  main.rs
App_gui/: Cargo.toml  tauri.conf.json
App_gui/src/: io_gui.rs  main.rs
App_gui/ui/: index.html  main.js  on_command.js  style.css  tab.js
Archives/: infos.json
Core/: Cargo.toml
Core/src/: help_str.txt  lib.rs
Core/src/utils/: com_analyzer.rs  commands.rs  file_manager.rs  io_manager.rs
src/: io_commandline.rs  lib.rs  main.rs
src/app_cmd/: io_commandline.rs  main.rs
src/core/: lib.rs
src/core/utils/: com_analyzer.rs  commands.rs  file_manager.rs  io_manager.rs
src/utils/: com_analyzer.rs  commands.rs  file_manager.rs  io_manager.rs  mod.rs  out_logger.rs
