[package]
name = "noita_archive_manager"
version = "2.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
