[package]
name = "NoitArchiver"
version = "2.1.0"
authors = ["runner"]
edition = "2021"

[lib]
name = "noitarchiver_core"
path = "./src/core/lib.rs"

[[bin]]
name = "noitarchiver_cmd"
path = "./src/app_cmd/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
